--- a/ANSv4/Catalogo4/mwViajantes.xaml
+++ b/ANSv4/Catalogo4/mwViajantes.xaml
@@ -131,12 +131,12 @@
                                 </Grid>
                             </ad:DocumentContent>
 
-                            <ad:DocumentContent Title="Rendiciones">
+                            <ad:DocumentContent Title="Rendición de Recibos">
                                 <Grid Name="grRendiciones">
                                     <Grid.RowDefinitions>
                                         <RowDefinition  Height="*"/>
                                     </Grid.RowDefinitions>
-                                    <Grid x:Name="xRendiciones" Grid.Row="0" />
+                                    <Grid x:Name="xRendicionArea" Grid.Row="0" />
                                 </Grid>
                             </ad:DocumentContent>
 
