quite borde rojo de los forms

--- a/ANSv4/Catalogo4/mwClientes.xaml
+++ b/ANSv4/Catalogo4/mwClientes.xaml
@@ -9,10 +9,10 @@
         WindowStartupLocation="CenterScreen"        
         
         BorderThickness="0"
-        ResizeMode="CanResize"  Icon="recursos/LOGO-ANS-32X32.ico" AllowsTransparency="False" WindowStyle="None" BorderBrush="#FFE31C19">
+        ResizeMode="CanResize"  Icon="recursos/LOGO-ANS-32X32.ico" AllowsTransparency="False" WindowStyle="None" BorderBrush="#FFFFFF">
 
     <Border Grid.Row="0" x:Name="LayoutRoot" 
-          Background="White" BorderBrush="#E31C19" BorderThickness="1"  MouseLeftButtonDown="Title_MouseLeftButtonDown">
+          Background="White" BorderBrush="White" BorderThickness="1"  MouseLeftButtonDown="Title_MouseLeftButtonDown">
            
             <Grid>
             <Grid.RowDefinitions>
