--- a/ANSv4/Catalogo4/mwClientes.xaml
+++ b/ANSv4/Catalogo4/mwClientes.xaml
@@ -162,16 +162,14 @@
 
                         <ad:DockablePane ad:ResizingPanel.ResizeWidth="150"  ShowHeader="True" >
                             <ad:DockableContent x:Name="ContentMenu" Title="Menú"  DockableStyle="AutoHide" IsCloseable="False" >
-                                <ListBox>
-                                    <ListBoxItem Content="Recibos"/>
-                                    <ListBoxItem Content="Rendiciones"/>
-                                    <ListBoxItem Content="Porcentajes Líneas"/>
-                                    <ListBoxItem Content="ANS en internet"/>
-                                    <ListBoxItem Content="Revista Digital"/>
-                                    <ListBoxItem Content="Configuración Aplic."/>
-                                </ListBox>
+                                <!--Menus-->
+                                <Menu>
+                                    <MenuItem Header="Sitio web de a.n.s." Click="xMenu1_web"/>
+                                    <MenuItem Header="Revista Dígital" Click="xMenu1_revista"/>
+                                    <MenuItem Header="Porcentajes Líneas"  Click="xMenu1_porcentajeL"/>
+                                    <MenuItem Header="Configuración Aplic." Click="xMenu1_AppConfig"/>
+                                </Menu>
                             </ad:DockableContent>
-
                         </ad:DockablePane>
                     </ad:ResizingPanel>
                 </ad:ResizingPanel>
