--- a/ANSv4/Catalogo4/_preferencias/TextEditINI.xaml
+++ b/ANSv4/Catalogo4/_preferencias/TextEditINI.xaml
@@ -4,9 +4,9 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              mc:Ignorable="d" 
-             d:DesignHeight="20" d:DesignWidth="200">
+             d:DesignHeight="60" d:DesignWidth="200">
     <Grid>
-        <Label Name="Label1" Content="Label" HorizontalAlignment="Left" VerticalAlignment="Top" Width="68"/>
-        <TextBox Name="EditBox1" HorizontalAlignment="Left" Height="20" Margin="73,0,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="127"/>
+        <Label Name="Label1" Content="Label" HorizontalAlignment="Left"   Margin="0,10,0,0" VerticalAlignment="Center"   Width="70"/>
+        <TextBox Name="EditBox1" HorizontalAlignment="Left" Height="20" Margin="73,10,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Center" Width="127"/>
     </Grid>
 </UserControl>
