--- a/ANSv4/Catalogo4/_registro/Registration.xaml
+++ b/ANSv4/Catalogo4/_registro/Registration.xaml
@@ -9,7 +9,7 @@
 
     <Border Grid.Row="0" x:Name="LayoutRoot" 
           Background="White" BorderBrush="White" BorderThickness="1"  MouseLeftButtonDown="Title_MouseLeftButtonDown">
-        <Grid>            
+        <Grid>
             <Grid x:Name="grilla">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="30px" />
@@ -32,39 +32,40 @@
                         />
                     </StackPanel>
                 </Grid>
-                <Grid  Height="430" Width="525" Background="#FFF3F2EF" Grid.Row="1">
-                    <TextBlock Height="23" HorizontalAlignment="Left" Margin="10,5,0,0" Name="textBlockHeading" Text="Registro de la Aplicación:" VerticalAlignment="Top" Width="209"  FontSize="17" FontStretch="ExtraCondensed"/>
+                <Grid  Height="430" Width="525" Grid.Row="1">
+                    <TextBlock Height="23" HorizontalAlignment="Left" Margin="10,5,0,0" x:Name="textBlockHeading" VerticalAlignment="Top" Width="209"  FontSize="17" FontStretch="ExtraCondensed"><Run Language="es-ar" Text="Bienvenido"/></TextBlock>
                     <Grid Margin="31,0,29,23" Background="White" Height="360" VerticalAlignment="Bottom">
                         <TextBlock Height="20" HorizontalAlignment="Left" Margin="47,0,0,0" x:Name ="errormessage" VerticalAlignment="Top" Width="247"  OpacityMask="Crimson" Foreground="#FFE5572C" />
-                        <TextBlock Height="23" HorizontalAlignment="Left" Margin="47,20,0,0" Name="textBlockFirstname" Text="Nombre:" VerticalAlignment="Top" Width="110" TextAlignment="Right" />
-                        <TextBlock Height="23" HorizontalAlignment="Left" Margin="47,50,0,0" Name="textBlockLastName" Text="Apellido:" VerticalAlignment="Top" Width="110" TextAlignment="Right" />
-                        <TextBlock Height="23" HorizontalAlignment="Left" Margin="47,80,0,0" Name="textBlockRazonSocial" Text="Razón Social:" VerticalAlignment="Top" Width="110" TextAlignment="Right" />
-                        <TextBlock Height="23" HorizontalAlignment="Left" Margin="47,110,0,0" Name="textBlockCuit" Text="C.U.I.T.:" VerticalAlignment="Top" Width="110" TextAlignment="Right" />
-                        <TextBlock Height="23" HorizontalAlignment="Left" Margin="47,140,0,0" Name="textBlockEmailId" Text="Email" VerticalAlignment="Top" Width="110" TextAlignment="Right" />
-                        <TextBlock Height="23" HorizontalAlignment="Left" Margin="47,170,0,0" Name="textBlockNroCuenta" Text="n° de Cuenta Cliente" VerticalAlignment="Top" Width="110" TextAlignment="Right" />
-                        <TextBlock Height="23" HorizontalAlignment="Left" Margin="47,200,0,0" Name="textBlockNroZona" Text="n° de Zona Viajante" VerticalAlignment="Top" Width="110" TextAlignment="Right" />
-                        <TextBlock Height="23" HorizontalAlignment="Left" Margin="47,230,0,0" Name="textBlockPassword" Text="Llave Habilitación:" VerticalAlignment="Top" Width="110" TextAlignment="Right"  />
-                        <TextBlock Height="23" HorizontalAlignment="Left" Margin="47,260,0,0" Name="textBlockConfirmPwd" Text="Confirmar Llave:" VerticalAlignment="Top" Width="110" TextAlignment="Right" />
+                        <TextBlock Height="23" HorizontalAlignment="Left" Margin="5,6,0,0" Name="textBlockFirstname" Text="Nombre:" VerticalAlignment="Top" Width="110" TextAlignment="Right" />
+                        <TextBlock Height="23" HorizontalAlignment="Left" Margin="5,36,0,0" Name="textBlockLastName" Text="Apellido:" VerticalAlignment="Top" Width="110" TextAlignment="Right" />
+                        <TextBlock Height="23" HorizontalAlignment="Left" Margin="5,66,0,0" Name="textBlockRazonSocial" Text="Razón Social:" VerticalAlignment="Top" Width="110" TextAlignment="Right" />
+                        <TextBlock Height="23" HorizontalAlignment="Left" Margin="5,96,0,0" Name="textBlockCuit" Text="C.U.I.T.:" VerticalAlignment="Top" Width="110" TextAlignment="Right" />
+                        <TextBlock Height="23" HorizontalAlignment="Left" Margin="5,126,0,0" Name="textBlockEmailId" Text="Email" VerticalAlignment="Top" Width="110" TextAlignment="Right" />
+                        <TextBlock Height="23" HorizontalAlignment="Left" Margin="5,156,0,0" Name="textBlockNroCuenta" Text="n° de Cuenta Cliente" VerticalAlignment="Top" Width="110" TextAlignment="Right" />
+                        <TextBlock Height="23" HorizontalAlignment="Left" Margin="5,186,0,0" Name="textBlockNroZona" Text="n° de Zona Viajante" VerticalAlignment="Top" Width="110" TextAlignment="Right" />
+                        <TextBlock Height="23" HorizontalAlignment="Left" Margin="5,216,0,0" Name="textBlockPassword" Text="Llave Habilitación:" VerticalAlignment="Top" Width="110" TextAlignment="Right"  />
+                        <TextBlock Height="23" HorizontalAlignment="Left" Margin="5,246,0,0" Name="textBlockConfirmPwd" Text="Confirmar Llave:" VerticalAlignment="Top" Width="110" TextAlignment="Right" />
 
 
-                        <TextBox Height="23" HorizontalAlignment="Left" Margin="173,20,0,0" Name="textBoxFirstName" VerticalAlignment="Top" Width="222" MaxLength="32"/>
-                        <TextBox Height="23" HorizontalAlignment="Left" Margin="173,50,0,0" Name="textBoxLastName" VerticalAlignment="Top" Width="222" MaxLength="32"/>
-                        <TextBox Height="23" HorizontalAlignment="Left" Margin="173,80,0,0" Name="textBoxRazonSocial" VerticalAlignment="Top" Width="222" MaxLength="64"/>
-                        <TextBox Height="23" HorizontalAlignment="Left" Margin="173,110,0,0" Name="textBoxCuit" VerticalAlignment="Top" Width="222"  MaxLength="13" PreviewTextInput="textBoxCuit_PreviewTextInput"/>
-                        <TextBox Height="23" HorizontalAlignment="Left" Margin="173,140,0,0" Name="textBoxEmail" VerticalAlignment="Top" Width="222" MaxLength="64"/>
+                        <TextBox Height="23" HorizontalAlignment="Left" Margin="131,6,0,0" Name="textBoxFirstName" VerticalAlignment="Top" Width="222" MaxLength="32"/>
+                        <TextBox Height="23" HorizontalAlignment="Left" Margin="131,36,0,0" Name="textBoxLastName" VerticalAlignment="Top" Width="222" MaxLength="32"/>
+                        <TextBox Height="23" HorizontalAlignment="Left" Margin="131,66,0,0" Name="textBoxRazonSocial" VerticalAlignment="Top" Width="222" MaxLength="64"/>
+                        <TextBox Height="23" HorizontalAlignment="Left" Margin="131,96,0,0" Name="textBoxCuit" VerticalAlignment="Top" Width="222"  MaxLength="13" PreviewTextInput="textBoxCuit_PreviewTextInput"/>
+                        <TextBox Height="23" HorizontalAlignment="Left" Margin="131,126,0,0" Name="textBoxEmail" VerticalAlignment="Top" Width="222" MaxLength="64"/>
 
-                        <TextBox Height="23" HorizontalAlignment="Left" Margin="173,170,0,0" Name="textBoxNroCuenta" VerticalAlignment="Top" Width="80" MaxLength="5" PreviewTextInput="textBoxNroCuenta_PreviewTextInput"/>
+                        <TextBox Height="23" HorizontalAlignment="Left" Margin="131,156,0,0" Name="textBoxNroCuenta" VerticalAlignment="Top" Width="80" MaxLength="5" PreviewTextInput="textBoxNroCuenta_PreviewTextInput"/>
 
-                        <TextBox Height="23" HorizontalAlignment="Left" Margin="173,200,0,0" Name="textBoxNroZona" VerticalAlignment="Top" Width="80" MaxLength="5" PreviewTextInput="textBoxNroZona_PreviewTextInput" />
+                        <TextBox Height="23" HorizontalAlignment="Left" Margin="131,186,0,0" Name="textBoxNroZona" VerticalAlignment="Top" Width="80" MaxLength="5" PreviewTextInput="textBoxNroZona_PreviewTextInput" />
 
-                        <PasswordBox Height="23" HorizontalAlignment="Left" Margin="173,230,0,0" Name="passwordBox1" VerticalAlignment="Top" Width="100" MaxLength="32"/>
-                        <PasswordBox Height="23" HorizontalAlignment="Left" Margin="173,260,0,0" Name="passwordBoxConfirm" VerticalAlignment="Top" Width="100" MaxLength="32"/>
+                        <PasswordBox Height="23" HorizontalAlignment="Left" Margin="131,216,0,0" Name="passwordBox1" VerticalAlignment="Top" Width="100" MaxLength="32"/>
+                        <PasswordBox Height="23" HorizontalAlignment="Left" Margin="131,246,0,0" Name="passwordBoxConfirm" VerticalAlignment="Top" Width="100" MaxLength="32"/>
 
                         <Button Content="Registrar" Height="23" HorizontalAlignment="Left" Margin="100,310,0,0" Name="Submit" VerticalAlignment="Top" Width="70" Click="Submit_Click" />
                         <Button Content="Resetear" Height="23" HorizontalAlignment="Left" Margin="180,310,0,0" Name="button2" VerticalAlignment="Top" Width="70" Click="button2_Click" />
                         <Button Content="Cancelar Registro" Height="23" HorizontalAlignment="Left" Margin="260,310,0,0" Name="button3" VerticalAlignment="Top" Width="120" Click="button3_Click" />
                     </Grid>
-                </Grid>                
+                    <Image HorizontalAlignment="Left" Height="100" Margin="415,0,0,0" VerticalAlignment="Top" Width="110" Source="pack://siteoforigin:,,,/recursos/Nuevo-logo-Auto-nautica-original.png"/>
+                </Grid>
             </Grid>
         </Grid>
     </Border>
