--- a/ANSv4/Catalogo4/_productos/DetalleImagen.xaml
+++ b/ANSv4/Catalogo4/_productos/DetalleImagen.xaml
@@ -1,8 +1,10 @@
-﻿<Window x:Class="Catalogo._productos.DeetalleImagen"
+﻿<Window x:Class="Catalogo._productos.DetalleImagen"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Detalle Imagen:" Height="Auto" Width="Auto">
+        Title="Detalle Imagen:" Height="400" Width="400">
     <Grid>
-        <Image HorizontalAlignment="Left" Height="Auto" VerticalAlignment="Top" Width="Auto" Name="ImagenDetalle"/>
+        <Button HorizontalAlignment="Left" Height="Auto" VerticalAlignment="Top" Width="Auto" Click="Button_Click_1">
+            <Image HorizontalAlignment="Left" Height="Auto" VerticalAlignment="Top" Width="Auto" Name="ImagenDetalle"/>
+        </Button>
     </Grid>
 </Window>
