--- a/ANSv4/Catalogo4/mwViajantes.xaml
+++ b/ANSv4/Catalogo4/mwViajantes.xaml
@@ -22,14 +22,14 @@
 
             <Grid Name="header" Visibility="Visible" Grid.Row="0">
                 <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="170" />
+                    <ColumnDefinition Width="150" />
                     <ColumnDefinition Width="*" />
                     <ColumnDefinition Width="170" />
                 </Grid.ColumnDefinitions>
                 <Grid Name="LeftBanner" HorizontalAlignment="Left" Grid.Column="0">
                     <Image Name="topLogo" VerticalAlignment="Bottom" Source="recursos/logo.png" Margin="0,1,1,0"/>
                 </Grid>
-                <Grid Name="topBanner" HorizontalAlignment="Center" Grid.Column="1"/>
+                <Grid Name="topBanner"  Grid.Column="1"/>
                 <Grid Name="RightBanner" HorizontalAlignment="Right" Grid.Column="2">
                     <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" VerticalAlignment="Top">
                         <Button Content="2" BorderBrush="White" x:Name="ChangeViewButton"
@@ -84,7 +84,7 @@
             <ad:DockingManager x:Name="dockManager" Grid.Row="1" IsAnimationEnabled="True" >
                 <ad:ResizingPanel Orientation="Vertical">
                     <ad:ResizingPanel Orientation="Horizontal">
-                        <ad:DocumentPane Loaded="DocumentPane_Loaded_1" ShowHeader="True" SelectedIndex="0" SelectionChanged="DocumentPane_SelectionChanged">
+                        <ad:DocumentPane Loaded="DocumentPane_Loaded_1" ShowHeader="True" SelectedIndex="5" SelectionChanged="DocumentPane_SelectionChanged">
 
                             <ad:DocumentContent Title="Productos" IsCloseable="False" IsFloatingAllowed="False" >
                                 <Grid Name="grProductos">
