--- a/ANSv4/Catalogo4/_productos/DetalleImagen.xaml
+++ b/ANSv4/Catalogo4/_productos/DetalleImagen.xaml
@@ -1,10 +1,43 @@
-﻿<Window x:Class="Catalogo._productos.DetalleImagen"
+﻿<Window x:Class="Catalogo._productos.DetalleImagen" x:Name="nDetalleImagen"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Detalle Imagen:" Height="400" Width="400">
-    <Grid>
-        <Button HorizontalAlignment="Left" Height="Auto" VerticalAlignment="Top" Width="Auto" Click="Button_Click_1">
-            <Image HorizontalAlignment="Left" Height="Auto" VerticalAlignment="Top" Width="Auto" Name="ImagenDetalle" Stretch="UniformToFill"/>
-        </Button>
-    </Grid>
+        Height="400" Width="400"
+        Title="Detalle de la Imágen - Auto Náutica Sur s.r.l." 
+        WindowStartupLocation="CenterScreen"                
+        BorderThickness="0"
+        ResizeMode="CanResize"  Icon="../recursos/LOGO-ANS-32X32.ico" AllowsTransparency="False" WindowStyle="None" BorderBrush="#FFFFFF" >
+
+    <Border Grid.Row="0" x:Name="LayoutRoot" 
+          Background="White" BorderBrush="White" BorderThickness="1"  MouseLeftButtonDown="Title_MouseLeftButtonDown">
+
+        <Grid>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="28"/>
+                <RowDefinition Height="*"/>
+            </Grid.RowDefinitions>
+
+            <Grid Grid.Row="0">
+                <Grid Name="RightBanner" HorizontalAlignment="Right">
+                        <Button Content="r" BorderBrush="White"
+                        x:Name="CloseButton"                            
+                        FontFamily="Webdings"                        
+                        FontSize="12"
+                        Width="25"
+                        Height="25"
+                        Background="White"
+                        HorizontalContentAlignment="Center"
+                        VerticalContentAlignment="Center"
+                        HorizontalAlignment="Right"
+                        Click="Exit"
+                        />
+                 </Grid>
+            </Grid>
+            <Grid Grid.Row="1">
+                <Button HorizontalAlignment="Left" Height="Auto" VerticalAlignment="Top" Width="Auto" Click="Button_Click_1">
+                    <Image HorizontalAlignment="Left" Height="Auto" VerticalAlignment="Top" Width="Auto" Name="ImagenDetalle" Stretch="UniformToFill"/>
+                </Button>
+            </Grid>
+        </Grid>
+    </Border>
 </Window>
+    
