novedades f_leido, Destino y otros

--- a/ANSv4/Catalogo4/mwViajantes.xaml
+++ b/ANSv4/Catalogo4/mwViajantes.xaml
@@ -77,7 +77,40 @@
                         Click="Exit"
                         />
                     </StackPanel>
-                    <Image Name="topRedesSociales" VerticalAlignment="Bottom"  Source="recursos/cotizacion-redes.png" Margin="0,30,10,6"/>
+                    <StackPanel x:Name="topRedesSociales" Orientation="Horizontal" HorizontalAlignment="Right" VerticalAlignment="Bottom">                        
+                        <Button x:Name="btnYoutube" Height="27" Width="27"  Margin="0,0,4,0" Click="btnYoutube_Click" BorderThickness="0" Cursor="Hand" Style="{DynamicResource BorderlessButton}">
+                            <Button.BorderBrush>
+                                <SolidColorBrush Color="{DynamicResource {x:Static SystemColors.WindowColorKey}}"/>
+                            </Button.BorderBrush>
+                            <Button.Background>
+                                <ImageBrush ImageSource="recursos/icnYoutube.png" Stretch="Fill" TileMode="None" />
+                            </Button.Background>
+                        </Button>
+                        <Button x:Name="btnTwitter" Height="27" Width="27"  Margin="0,0,4,0" Click="btnTwitter_Click" BorderThickness="0" Cursor="Hand">
+                            <Button.BorderBrush>
+                                <SolidColorBrush Color="{DynamicResource {x:Static SystemColors.WindowColorKey}}"/>
+                            </Button.BorderBrush>
+                            <Button.Background>
+                                <ImageBrush ImageSource="recursos/icnTwitter.png" Stretch="Fill" TileMode="None" />
+                            </Button.Background>
+                        </Button>
+                        <Button x:Name="btnFacebook" Height="27" Width="27"  Margin="0,0,4,0" Click="btnFacebook_Click" BorderThickness="0" Cursor="Hand">
+                            <Button.BorderBrush>
+                                <SolidColorBrush Color="{DynamicResource {x:Static SystemColors.WindowColorKey}}"/>
+                            </Button.BorderBrush>
+                            <Button.Background>
+                                <ImageBrush ImageSource="recursos/icnFacebook.png" Stretch="Fill" TileMode="None" />
+                            </Button.Background>
+                        </Button>
+                        <Button x:Name="btnLinkedin"  Height="27" Width="27"  Margin="0,0,4,0" Click="btnLinkedin_Click" BorderThickness="0" Cursor="Hand">
+                            <Button.BorderBrush>
+                                <SolidColorBrush Color="{DynamicResource {x:Static SystemColors.WindowColorKey}}"/>
+                            </Button.BorderBrush>
+                            <Button.Background>
+                                <ImageBrush ImageSource="recursos/icnLinkedin.png" Stretch="Fill" TileMode="None" />
+                            </Button.Background>
+                        </Button>
+                    </StackPanel>
                 </Grid>
             </Grid>
 
@@ -105,7 +138,7 @@
                                             <_productos:DetalleProducto x:Name="productDetalle"/>
                                         </Grid>
                                     </Grid>
-                                    <GridSplitter Grid.Row="2" ResizeDirection="Rows"  ResizeBehavior="BasedOnAlignment" HorizontalAlignment="Stretch"/>                                   
+                                    <GridSplitter Grid.Row="2" ResizeDirection="Rows"  ResizeBehavior="BasedOnAlignment" HorizontalAlignment="Stretch"/>
                                     <Grid x:Name="PedidosDevolucionesArea"   Grid.Row="3">
                                         <ad:DocumentPane x:Name="xVtaDevDockP" SelectedIndex="0" ad:ResizingPanel.ResizeHeight="250">
                                             <ad:DockableContent Title="Nota de Venta" x:Name="xNotaVentaAreaDockC" IsCloseable="False">
@@ -128,7 +161,7 @@
                                     </Grid>
                                 </Grid>
                             </ad:DocumentContent>
-                            
+
                             <ad:DocumentContent Title="Recibos" IsCloseable="False" IsFloatingAllowed="False">
                                 <Grid Name="grRecibos">
                                     <Grid.RowDefinitions>
@@ -184,9 +217,9 @@
                                     <MenuItem Header="Configuración Aplic." Click="xMenu1_AppConfig"/>
                                 </Menu>
                             </ad:DockableContent>
-                        </ad:DockablePane> 
-                        
-                    </ad:ResizingPanel>                    
+                        </ad:DockablePane>
+
+                    </ad:ResizingPanel>
                 </ad:ResizingPanel>
             </ad:DockingManager>
 
