--- a/ANSv4/Catalogo4/_preferencias/CheckBoxINI.xaml
+++ b/ANSv4/Catalogo4/_preferencias/CheckBoxINI.xaml
@@ -6,6 +6,6 @@
              mc:Ignorable="d" 
              d:DesignHeight="20" d:DesignWidth="200">
     <Grid>
-        <CheckBox Name="check" Content="CheckBox" HorizontalAlignment="Left" Margin="10,10,0,0" Checked="check_Checked"/>
+        <CheckBox Name="check" Content="CheckBox" HorizontalAlignment="Left" Margin="10,0,0,0" Checked="check_Checked" Unchecked="check_Unchecked_1" Click="check_Click_1"/>
     </Grid>
 </UserControl>
